@@ -179,6 +179,7 @@ Vincent Delft
 Arnaud Delobelle
 Erik Demaine
 Roger Dev
+Catherine Devlin
 Raghuram Devarakonda
 Toby Dickenson
 Mark Dickinson
