@@ -78,6 +78,9 @@ C-API
 Library
 -------
 
+- Issue #8620: when a Cmd is fed input that reaches EOF without a final
+  newline, it no longer truncates the last character of the last command line.
+
 - Issue #3704: http.cookiejar was not properly handling URLs with a / in the
   parameters.
 
